--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -1,4 +1,4 @@
-<div class="note" ng-class="{'reply-content': note.category === 'reply'}">
+<div class="note" ng-class="{'reply-content': note.category === 'reply', 'note-replies': note.replies.length>0}">
     <div class="note-contributor">{{note.contributor}}</div>
     <div class="date">{{date}}<br></div>
     <div class="note-content">{{note.content}}</div>
@@ -13,6 +13,7 @@
             <div ng-if="note.contributor_list.length==1">{{note.contributor_list.length}} person found this helpful.</div>
             <div ng-if="note.contributor_list.length<1">Not rated yet.</div>
         </div>
-        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" date="date" current-reply="currentReply" top-note="topNote"></note>
+
     </div>
 </div>
+<note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" date="date" current-reply="currentReply" top-note="topNote"></note>
