--- a/app/scripts/templates/note-filter.html
+++ b/app/scripts/templates/note-filter.html
@@ -5,4 +5,21 @@
     <ui-select-choices repeat="item in (list | filter: $select.search) track by item.id">
         <span ng-bind="item.name"></span>
     </ui-select-choices>
-</ui-select>-->
+</ui-select>
+       /*$scope.itemArray = [
+            {id: 1, name: 'first'},
+            {id: 2, name: 'second'},
+            {id: 3, name: 'third'},
+            {id: 4, name: 'fourth'},
+            {id: 5, name: 'fifth'}
+        ];
+
+        $scope.selectedItem = $scope.itemArray[0];
+
+        return {
+            restrict: 'E',
+            templateUrl: 'note-filter.html',
+            scope: {list: '='}
+        };
+    });s
+-->
