--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -36,6 +36,7 @@ img{
 
 .note-content{
   padding:0 15px;
+  margin:5px 0;
   font-family:'Open sans', sans-serif;
   font-size:13px;
 }
@@ -61,6 +62,8 @@ img{
   line-height: 9px;
   width: 20px;
   position: relative;
+  float:left;
+  margin:2.5% 0;
 }
 
 .filter-icon:hover{
@@ -96,8 +99,13 @@ img{
   background-color: #e7e7e7;
 }
 
+.filter-steps{
+    margin-right:0 !important;
+ }
+
 .note-icon{
   float:left;
+   margin:0 0;
 }
 
 .filter-icon-details {
@@ -109,6 +117,7 @@ img{
 .filter-icon-corrections {
   background-image: url(../images/PNG/healing.png);
   background-position: 2px 2px;
+  margin-left: 5%;
 }
 
 .filter-icon-questions {
@@ -121,6 +130,7 @@ img{
   background-image: url(../images/PNG/other.png);
   background-size: 17px;
   background-position: 2px 2px;
+  margin-right: 17% !Important;
 }
 
 .note-icon-details{
@@ -170,17 +180,18 @@ img{
   background-color: #d4ed96;
 }
 
-.selected-details, .number-details, .icon-details:hover {
+.selected-details, .number-details,.filter-icon-details:hover, .icon-details:hover {
   background-color: #ccc0eb;
+  border-radius:10px;
 }
-.selected-corrections,.number-corrections,  .icon-corrections:hover {
+.selected-corrections,.number-corrections,.filter-icon-corrections:hover,  .icon-corrections:hover {
   background-color: #ebb083;
 }
 
-.selected-questions,.number-questions, .icon-questions:hover {
+.selected-questions,.number-questions,.filter-icon-questions:hover, .icon-questions:hover {
   background-color: #ebdc69;
 }
-.selected-other,.number-other, .icon-other:hover {
+.selected-other,.number-other,.filter-icon-other:hover,.icon-other:hover {
   background-color: #c0d982;
 }
 
@@ -222,10 +233,16 @@ img{
   background-color:white;
 }
 
-.dropdown {
+.sortDropdown {
   padding: 0 3px;
-  margin: 0 10px;
-  line-height: 24px;
+  margin: 0 3%;
+  float:left;
+  margin-top:10px;
+}
+
+.dropdown {
+  float:left;
+  margin-left:3%;
 }
 
 .note-contributor {
@@ -268,8 +285,8 @@ img{
 }
 
 .input-container {
-  background-color: #fff;
-  border: 1px solid #949494;
+  background-color: #efefef;
+  border: 1px solid #e2e2e2;
   font-size: 0.9em;
   font-family:'Open sans', sans-serif;
   margin: 0 0 0 500px;
@@ -279,26 +296,27 @@ img{
 }
 
 .note-container {
-  border: 1px solid rgba(186, 186, 186, 0.53);
+  border: 1px solid #e2e2e2;
   border-top: none;
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 10px;
-  background-color: #e9e9e9;
+  background-color: #efefef;
   position: fixed;
   right: 20px;
-  top: 14.7%;
-  height: 81%;
+  top: 16%;//14.7%;
+  height: 81%; //81%;
+  z-index:1;
 }
 
 .filter-container {
-  border: 1px solid rgba(186, 186, 186, 0.53);
+  border: 1px solid #e2e2e2;
   border-bottom: none;
   padding: 5px;
-  background-color: #e9e9e9;
+  background-color: #efefef;
   position: fixed;
   top: 4.2%;
-  height: 10.6%;
+  height: 12%;
   box-shadow:0 3px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -316,9 +334,6 @@ img{
   right: calc(20% + 20px);
 }
 
-.sort-drop {
-  margin-top: 20px;
-}
 
 .filter {
   right: 20px;
@@ -341,6 +356,21 @@ img{
 .plain-button {
   background-color: #62e2d9;
   float: right;
+  padding: 1.5px 10px;
+  position: relative;
+  right: 0;
+  top: 0;
+  font-weight:bold;
+  font-size: 0.65em;
+  font-family:'Open sans', sans-serif;
+  color: white;
+  line-height: 18px;
+  border-radius:3px;
+}
+
+.clear-button {
+  color: #62e2d9;
+  float: right;
   padding: 3px 8px;
   position: relative;
   right: 0;
@@ -348,9 +378,12 @@ img{
   font-weight:bold;
   font-size:11px;
   font-family:'Open sans', sans-serif;
-  color: white;
   line-height: 20px;
   border-radius:2px;
+}
+
+.clear-button:hover{
+  color: #4db2ab;
 }
 
 .plain-button:hover{
@@ -360,8 +393,6 @@ img{
 
 .reply-button {
   float: right;
-  font-size: 0.65em;
-  font-family:'Open sans', sans-serif;
   margin-left: 5px;
 }
 
@@ -492,7 +523,7 @@ h2 {
 .window-title {
   font-weight: bold;
   font-family:'Open sans', sans-serif;
-  color: darkgrey;
+  color: #6f6f6f;
   margin-left: 15px;
   float: left;
 }
@@ -503,36 +534,36 @@ h2 {
 
 .selected-steps {
   font-weight: bold;
-  color: #4c4c4c;
+  font-family:'Open sans', sans-serif;
+  color: #6f6f6f;
   padding-left: 15px;
   position: absolute;
   outline: none;
   float: left;
   clear: right;
   margin-bottom: 2px;
-  font-size: 0.8em;
-  font-family:'Open sans', sans-serif;
+  font-size: 11px;
 }
 
 .delete-button {
   background: rgba(255, 0, 21, 0.57);
   margin: 0 10px;
 
-  font-size: 0.6em;
   float: right;
   color: white;
-  border-radius: 3px;
+  //border-radius: 3px;
   border-color: red;
-  line-height: 15px;
+
 }
 
 .delete-button:hover {
-  background: #ff0700;
+  background: rgba(255, 7, 0, 0.79);
 }
 
 .close-button {
   font-size: 0.8em;
   font-family:'Open sans', sans-serif;
+  font-weight:bold;
   float: right;
 }
 
@@ -583,18 +614,18 @@ h2 {
 
 .rating-button {
   background-image: url(../images/PNG/thumbs-UP.png);
-  background-position: 6px 0;
+  background-position: 0px 0;
   background-repeat: no-repeat;
   background-size: 20px;
   height: 28px;
   line-height: 9px;
-  width: 35px;
+  width: 25px;
   float: left;
   outline:none;
 }
 
 .rated{
-  background-image: url(../images/PNG/thumbs-up-pressed.png);;
+  background-image: url(../images/PNG/thumbs-up-pressed.png);
 }
 
 .step-list {
@@ -604,7 +635,7 @@ h2 {
   text-align: left;
   font-weight: bold;
   font-family:'Open sans', sans-serif;
-  color: #8d8d8d;
+  color: #62e2d9;
 }
 
 .disabled-steps {
@@ -619,10 +650,16 @@ h2 {
 
 .plus-action-button {
   padding: 2px 10px;
+  font-weight:bold;
+  font-family:'Open sans', sans-serif;
+  color:#62e2d9;
 }
 
 .minus-action-button {
   padding: 2px 12px;
+  font-weight:bold;
+  font-family:'Open sans', sans-serif;
+  color:#62e2d9;
 }
 
 .menu-action-button:hover {
@@ -634,7 +671,7 @@ h2 {
 }
 
 .selected-menu-button {
-  background-color:#f9f9f9;
+  background-color:#4db2ab;
 }
 
 .menu-button {
@@ -694,7 +731,12 @@ h2 {
 }
 
 .note-display {
-  margin-left: 10px;
+  margin-right: 25%;
+  float:left;
+  font-size: 14px;
+  color: #6f6f6f;
+  font-weight:600;
+  font-family:'Open sans', sans-serif;
 }
 
 .text{
