--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -63,7 +63,7 @@ img{
   width: 20px;
   position: relative;
   float:left;
-  margin:2.5% 0;
+  margin:2.5% 1%;
 }
 
 .filter-icon:hover{
@@ -130,7 +130,7 @@ img{
   background-image: url(../images/PNG/other.png);
   background-size: 17px;
   background-position: 2px 2px;
-  margin-right: 17% !Important;
+  margin-right: 11% !Important;
 }
 
 .note-icon-details{
@@ -194,6 +194,9 @@ img{
   background-color: #c0d982;
 }
 
+.note-highlight{
+  background-color: rgba(204, 192, 235, 0.45) !important;
+}
 
 .note-details {
   border: 1px solid #d3d3d3;
@@ -273,7 +276,7 @@ img{
   border-bottom:none;
   z-index:1;
   position:relative;
-  box-shadow:0 3px 5px 0 rgba(0, 0, 0, 0.24) !important;
+  box-shadow:0 3px 5px 0 rgba(0, 0, 0, 0.12) !important;
 }
 
 .reply-content{
@@ -548,18 +551,16 @@ h2 {
 }
 
 .delete-button {
-  background: rgba(255, 0, 21, 0.57);
+  background: white;
   margin: 0 10px;
-
   float: right;
-  color: white;
+  color: red;
   //border-radius: 3px;
-  border-color: red;
-
 }
 
 .delete-button:hover {
   background: rgba(255, 7, 0, 0.79);
+  color: white;
 }
 
 .close-button {
