--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -4,7 +4,8 @@
      'note-questions': note.category === 'questions' || parentCategory === 'questions' ,
      'note-other': note.category === 'other' || parentCategory === 'other',
      'reply-content': note.category === 'reply',
-     'note-replies': note.replies.length>0}">
+     'note-replies': note.replies.length>0,
+     'note-highlight': currentReply === note.id}">
     <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote && note.reply_to ==null && notelist.length>1 ">show steps</button>
     <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote && note.reply_to ==null && notelist.length>1 ">hide steps</button>
     <div class="note-steps text">
@@ -48,4 +49,4 @@
         </div>
     </div>
 </div>
-<note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" show-list="showList" user="user" general="general" date="date" current-note="currentNote" notelist="noteList" parent-category="parentCategory"></note>
+<note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" show-list="showList" user="user" general="general" date="date" current-note="currentNote" notelist="noteList" parent-category="parentCategory" current-reply="currentReply"></note>
