--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -1,14 +1,11 @@
-<div class="note" ng-class="
-    (note.category === 'corrections' ? 'note-corrections' :
-    (note.category === 'methods'? 'note-methods' :
-    (note.category === 'details' ? 'note-details' :
-    (note.category === 'questions' ? 'note-questions' :
-    (note.category === 'other' ? 'note-other' :
-    (parentCategory === 'corrections' ? 'reply-corrections' :
-    (parentCategory === 'methods'? 'reply-methods' :
-    (parentCategory === 'details' ? 'reply-details' :
-    (parentCategory === 'questions' ? 'reply-questions' :
-    parentCategory === 'other' ? 'reply-other' : 'reply-content')))))))))">
+<div class="note" ng-class="{
+     'note-corrections': note.category === 'corrections' || parentCategory === 'corrections' ,
+     'note-details': note.category === 'details' || parentCategory === 'details' ,
+     'note-questions': note.category === 'questions' || parentCategory === 'questions' ,
+     'note-other': note.category === 'other' || parentCategory === 'other',
+     'reply-content': note.category === 'reply',
+     'note-replies': note.replies.length>0,
+     'note-highlight': currentReply === note.id}">
 
     <div class="note-steps text">
         <div ng-if="notelist.length>=1" >Steps: {{notelist}}</div>
@@ -48,13 +45,14 @@
                 REPLY
         </button>
 
-        <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="delete-button">DELETE</button>
+        <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
         <button class="rating-button" ng-class="{'rated':note.contributor_list.indexOf(user.id)!=-1}" ng-click="rateIt(note.id)" tooltip="recommend"></button>
         <div class="note-rating">
             <div ng-if="note.contributor_list.length>1">{{note.contributor_list.length}} people found this helpful.</div>
             <div ng-if="note.contributor_list.length==1">{{note.contributor_list.length}} person found this helpful.</div>
             <div ng-if="note.contributor_list.length<1">Not rated yet.</div>
     </div>
-        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" date="date" current-note="currentNote" notelist="noteList" parent-category="parentCategory"></note>
-    </div>
+        </div>
+
 </div>
+<note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" date="date" current-note="currentNote" notelist="noteList" parent-category="parentCategory"></note>
