live rating and delete

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -168,6 +168,14 @@ img{
   border-radius: 2px;
 }
 
+.note-replies{
+  margin-bottom:0 !important;
+  border-bottom:none;
+  z-index:1;
+  position:relative;
+  box-shadow:0 3px 5px 0 rgba(0, 0, 0, 0.12) !important;
+}
+
 .note-contributor{
   font-size: 11px;
   font-family:'Open sans', sans-serif;
@@ -220,13 +228,6 @@ img{
   font-family:'Open sans', sans-serif;
 }
 
-.note-replies{
-  margin-bottom:3px !important;
-  border-bottom:none;
-  z-index:1;
-  position:relative;
-  box-shadow:0 3px 5px 0 rgba(0, 0, 0, 0.12) !important;
-}
 
 .reply-content{
   margin-top:0 !important;
