--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -32,7 +32,7 @@
         <div class="note-contributor">Other</div>
     </div>
 
-    <div class="note-contributor">{{note.contributor}} {{parentCategory}}</div>
+    <div class="note-contributor">{{note.contributor}}</div>
     <div class="date">{{date}}</div>
 
     <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
