--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -41,7 +41,7 @@ img{
 }
 
 .note-highlight{
-  background-color: rgba(166, 130, 255, 0.45) !important;
+  background-color: rgb(240, 239, 255) !important;
 }
 
 .icon{
@@ -93,6 +93,7 @@ img{
 .note {
   margin: 10px 0;
   padding:5px 10px;
+  padding-bottom:10px;
   clear: both;
   border-radius: 3px;
   background-color: #ffffff;
@@ -100,7 +101,7 @@ img{
 }
 
 .note-contributor {
-  font-size: 11px;
+  font-size: 13px;
   text-align: right;
   float: left;
   margin-right:10px;
@@ -110,10 +111,11 @@ img{
 }
 
 .reply-text{
-  margin:0 20px;
+  margin:2px 20px;
+  margin-bottom:5px;
   color: #545454;
   font-size:13px;
-  font-weight:500;
+  font-weight:600;
   font-family:'Open sans', sans-serif;
 }
 
@@ -195,6 +197,7 @@ img{
   line-height: 20px;
   border-radius: 3px;
   font-size:0.65em;
+  outline:none;
 }
 
 .plain-button:hover{
@@ -238,6 +241,7 @@ img{
   font-family:'Open sans', sans-serif;
   color: white;
   line-height: 15px;
+  outline:none;
 }
 
 .submit-button:hover{
@@ -275,18 +279,20 @@ h2 {
 
 
 .note-replies{
-  margin-bottom:3px !important;
-  border-bottom:none;
-  z-index:1;
-  position:relative;
-  box-shadow:0 3px 5px 0 rgba(0, 0, 0, 0.24) !important;
+  //margin-bottom:0 !important;
+  //border-bottom:none;
+ // z-index:3;
+  //position:relative;
+  //box-shadow:0 3px 5px 0 rgba(0, 0, 0, 0.24) !important;
+  //background:pink;
 }
 
 .reply-content{
-  margin-top:0 !important;
-  margin-bottom:1px !important;
-  border-top:none;
-  position:relative;
+  //margin-top:10px !important;
+  margin-bottom:0px !important;
+  //border-top:none;
+  //position:relative;
+  background: #ececec;
 }
 
 .contributors-show {
