small design fix

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -385,7 +385,7 @@ h2 {
 }
 
 .delete-button {
-  background: white;
+  background: rgba(255, 255, 255, 0);
   margin: 0 10px;
   float: right;
   color: red;
