--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -222,7 +222,7 @@ img{
 }
 
 .input-text{
-  width: 93%;
+  width: 100%;
   background-color: white;
   font-size: 11px;
   border: solid 1px #e2e2e2;
@@ -308,7 +308,11 @@ img{
 }
 
 .submit-button{
-
+  padding: 1% 44%;
+  margin-top:1%;
+  float:left;
+  font-size:14px;
+  font-weight:600;
 }
 
 .submit-comment-container{
@@ -565,7 +569,7 @@ h2{
   font-weight:bold;
   font-family:'Open sans', sans-serif;
   color:#62e2d9;
-  font-size:19px;
+  font-size:22px;
 }
 
 .plus-action-button:hover{
@@ -581,7 +585,7 @@ h2{
   font-weight:bold;
   font-family:'Open sans', sans-serif;
   color:#62e2d9;
-  font-size:19px;
+  font-size:22px;
 }
 
 .selected-menu-button {
