--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -309,7 +309,7 @@ img{
 
 .submit-button{
   padding: 1% 44%;
-  margin-top:1%;
+  margin-top:1
   float:left;
   font-size:14px;
   font-weight:600;
