design changes for replies

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -307,6 +307,13 @@ h2 {
   width: 26px;
   margin-right: 4px;
 }
+.replyOne{
+  background-color: white !important;
+}
+
+.replyTwo{
+  background-color: #ececec !important;
+}
 
 .contributors-show:hover{
   background-image: url(../images/SVG/ContributorsShowMoreHover.svg);
