--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -1,10 +1,12 @@
 <div class="note" ng-class="{
-     'note-corrections': note.category === 'corrections' || parentCategory === 'corrections' ,
-     'note-details': note.category === 'details' || parentCategory === 'details' ,
-     'note-questions': note.category === 'questions' || parentCategory === 'questions' ,
-     'note-other': note.category === 'other' || parentCategory === 'other',
+     'note-corrections': note.category === 'corrections' ,
+     'note-details': note.category === 'details',
+     'note-questions': note.category === 'questions',
+     'note-other': note.category === 'other',
      'reply-content': note.category === 'reply',
      'note-replies': note.replies.length>0,
+     'replyOne' : replyOne,
+     'replyTwo' : replyOne== false,
      'note-highlight': currentReply === note.id}">
     <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote && note.reply_to ==null && notelist.length>1 ">show steps</button>
     <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote && note.reply_to ==null && notelist.length>1 ">hide steps</button>
@@ -47,6 +49,7 @@
             <div ng-if="note.contributor_list.length==1">{{note.contributor_list.length}} person found this helpful.</div>
             <div ng-if="note.contributor_list.length<1">Not rated yet.</div>
         </div>
+        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" show-list="showList" user="user" general="general" date="date" current-note="currentNote" notelist="noteList" current-reply="currentReply" reply-one="!replyOne"></note>
+
     </div>
 </div>
-<note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" show-list="showList" user="user" general="general" date="date" current-note="currentNote" notelist="noteList" parent-category="parentCategory" current-reply="currentReply"></note>
