--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -699,6 +699,14 @@ h2 {
   background:#f9f9f9;
 }
 
+.submit-button{
+  padding: 1% 45%;
+  margin-top:1%;
+  float:left;
+  font-size:14px;
+  font-weight:600;
+}
+
 .menu-button {
   background-repeat: no-repeat;
   background-size: 10px;
