--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -308,7 +308,7 @@ img{
 }
 
 .submit-button{
-  padding: 1% 44%;
+  padding: 1% 45%;
   margin-top:1%;
   float:left;
   font-size:14px;
@@ -448,7 +448,7 @@ h2{
   font-weight: bold;
   font-family:'Open sans', sans-serif;
   color: #6f6f6f;
-  margin-left: 15px;
+  margin-left: 10px;
   float: left;
 }
 
@@ -456,17 +456,17 @@ h2{
   margin-left:30px;
 }
 
-.selected-steps{
-  font-weight:bold;
-  color: #4c4c4c;
-  padding-left: 15px;
-  position:absolute;
-  outline:none;
-  float:left;
-  clear:right;
-  margin-bottom:2px;
-  font-size: 0.8em;
- font-family:'Open sans', sans-serif;
+.selected-steps {
+  //font-weight: bold;
+  font-family:'Open sans', sans-serif;
+  color: #6f6f6f;
+  padding-left: 10px;
+  position: absolute;
+  outline: none;
+  float: left;
+  clear: right;
+  margin-bottom: 2px;
+  font-size: 13px;
 }
 
 .delete-button {
@@ -493,12 +493,13 @@ h2{
 }
 
 .return-button-first {
-  margin-left: 32%;
+  margin-left: 15%;
 }
 
 .return-button-second {
-  margin-left: 34.6%;
+  margin-left: 47.2%;
 }
+
 
 .close-button:hover {
   color: #535353;
@@ -560,6 +561,7 @@ h2{
   font-family:'Open sans', sans-serif;
   color: #62e2d9;
   background-color: white;
+  margin:0 -1%;
 }
 
 .menu-action-button {
@@ -581,19 +583,21 @@ h2{
 }
 
 .minus-action-button:hover{
-  color:#226B64;
+  color:#62e2d9;
 }
 
 .minus-action-button {
   padding: 2px 12px;
   font-weight:bold;
   font-family:'Open sans', sans-serif;
-  color:#62e2d9;
+  color:#226B64;
   font-size:22px;
 }
 
 .selected-menu-button {
   color:#226B64;
+  background:#f9f9f9;
+  border-top: 1px solid #e6e6e6;
 }
 
 .menu-button {
@@ -623,6 +627,7 @@ h2{
   background-position: 0 0;
   margin-right:10px;
   float:right;
+  outline:none;
 }
 
 .menu-two{
@@ -631,6 +636,7 @@ h2{
   margin-right:20px;
   margin-left:5px;
   float:left;
+  outline:none;
 }
 
 .menu-one:hover{
