--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -54,16 +54,17 @@ img{
   opacity : 0;
   position : absolute;
   background-color: #000;
-  font-size:0.7em;
-  border-radius: 10px;
+  font-size:0.7em !important;
+  font-family:'Open sans', sans-serif;
+  border-radius: 4px;
   color: #fff;
-  margin-left: -30px;
-  margin-top: 10px;
-  padding: 2px;
+  margin-left: -10px;
+  margin-top: 20px;
+  padding: 3px;
   pointer-events: none;
   transition: all 0.1s ease;
   white-space: nowrap;
-  z-index:1;
+  z-index:100;
 }
 
 [tooltip]:hover:before {
