--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -111,19 +111,19 @@ img{
 .filter-icon-details {
   background-image: url(../images/PNG/pin.png);
   background-size: 14px;
-  background-position: 2px 2px;
+  background-position: 2.5px 2.5px;
 }
 
 .filter-icon-corrections {
   background-image: url(../images/PNG/healing.png);
-  background-position: 2px 2px;
+  background-position: 2.5px 2.5px;
   margin-left: 5%;
 }
 
 .filter-icon-questions {
   background-image: url(../images/PNG/question.png);
   background-size: 13px;
-  background-position: 2px 2px;
+  background-position: 3px 2.5px;
 }
 
 .filter-icon-other {
@@ -157,27 +157,27 @@ img{
   background-image: url(../images/PNG/pin.png);
   background-size: 17px;
   background-position: 3px 3px;
-  //background-color: #e0d4ff;
+  //border:1.5px solid #e0d4ff;
 }
 
 .icon-corrections{
   background-image: url(../images/SVG/healing.svg);
   background-position: 3px;
-  //background-color: #ffc497;
+  //border:1.5px solid #ffc497;
 }
 
 .icon-questions{
   background-image: url(../images/PNG/question.png);
   background-size: 14px;
   background-position: 4px 3px;
-  //background-color: #fff07d;
+  //border:1.5px solid  #fff07d;
 }
 
 .icon-other{
   background-image: url(../images/PNG/other.png);
   background-size: 23px;
   background-position: 0 2px;
-  //background-color: #d4ed96;
+  //border:1.5px solid  #d4ed96;
 }
 
 .selected-details,.menu-details:hover, .filter-icon-details:hover ,.number-details, .icon-details:hover {
@@ -542,12 +542,13 @@ h2 {
   font-weight: bold;
   font-family:'Open sans', sans-serif;
   color: #6f6f6f;
-  margin-left: 10px;
+  margin-left: 2%;
   float: left;
 }
 
 .categories-title {
-  margin-left: 30px;
+  margin-left: 7.5%;
+  margin-right:3.5%;
 }
 
 .selected-steps {
@@ -594,7 +595,7 @@ h2 {
 }
 
 .return-button-second {
-  margin-left: 18.45%;
+  margin-left: 17.4%;
 }
 
 .close-button:hover {
@@ -603,7 +604,7 @@ h2 {
 }
 
 .close-button-second {
-  margin-right: 2.7%;
+  margin-right: 0%;
 }
 
 .return-button {
@@ -733,28 +734,36 @@ h2 {
 
 .preview-button:hover{
   background-image: url(../images/SVG/eyeSelected.svg);
+  background-size: 20px;
 }
 
 .menu-one {
-  background-image: url(../images/PNG/arrow-right.png);
-  background-position: 0 0;
-  margin-right: 10px;
+  background-image: url(../images/SVG/rightArrow.svg);
+  background-size: 20px;
+  background-position: 0 1px;
+  height: 28px;
+  line-height: 9px;
+  width: 20px;
   float: right;
 }
 
 .menu-two {
-  background-image: url(../images/PNG/arrow-left.png);
+  background-image: url(../images/SVG/leftArrow.svg);
+  background-size: 20px;
   background-position: 0 2px;
+  height: 28px;
+  line-height: 9px;
+  width: 20px;
   margin-right: 2.5%;
   float: left;
 }
 
 .menu-one:hover{
-  background-image: url(../images/PNG/arrow-right-hover.png);
+  //background-image: url(../images/PNG/arrow-right-hover.png);
 }
 
 .menu-two:hover{
-  background-image: url(../images/PNG/arrow-left-hover.png);
+  //background-image: url(../images/PNG/arrow-left-hover.png);
 }
 
 .date {
