--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -663,7 +663,22 @@ h2 {
 }
 
 .disabled-steps {
-  background-color: rgba(146, 146, 146, 0.76);
+  //background-color: rgba(146, 146, 146, 0.76);
+  color: #d9d9d9 !important;
+}
+
+.disabled-eye{
+  background-image: url(../images/PNG/eyeDisabled.png) !important;
+  background-size: 20px;
+}
+
+.disabled-eye:hover{
+  background-image: url(../images/SVG/eyeSelected.svg) !important;
+  background-size: 20px;
+}
+
+.disabled-steps:hover{
+  color:#226B64 !important;
 }
 
 .menu-action-button {
