--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -63,14 +63,16 @@ img{
   width: 20px;
   position: relative;
   float:left;
-  margin:2.5% 1%;
+  margin:0% 1%;
 }
 
 .filter-icon:hover{
-  border:none;
+  //border:none;
 }
 
-.selected, .icon:hover{border:none;}
+.selected, .icon:hover{
+  //border:none;
+}
 
 [tooltip]:before {
   content : attr(tooltip);
@@ -111,26 +113,30 @@ img{
 .filter-icon-details {
   background-image: url(../images/PNG/pin.png);
   background-size: 14px;
-  background-position: 2.5px 2.5px;
+  background-position: 2.5px 2px !important;
+  border:1.5px solid #ccc0eb;
 }
 
 .filter-icon-corrections {
   background-image: url(../images/PNG/healing.png);
-  background-position: 2.5px 2.5px;
-  margin-left: 5%;
+  background-position: 1.9px 1.9px !important;
+  border:1.5px solid #ebb083;
+  margin-left:0 !important;
 }
 
 .filter-icon-questions {
   background-image: url(../images/PNG/question.png);
   background-size: 13px;
-  background-position: 3px 2.5px;
+  background-position: 3px 2.5px !important;
+  border:1.5px solid  #ebdc69;
 }
 
 .filter-icon-other {
   background-image: url(../images/PNG/other.png);
   background-size: 17px;
-  background-position: 2px 2px;
+  background-position: -1px 1px !important;
   margin-right: 11% !Important;
+  border:1.5px solid  #c0d982;
 }
 
 .note-icon-details{
@@ -139,12 +145,12 @@ img{
   background-position: 2px 2px;
 }
 .note-icon-corrections{
-  background-image: url(../images/PNG/note-healing.png);
+  background-image: url(../images/PNG/note-healing.png); //border:1.5px solid #e0d4ff;
   background-position: 2px 2px;
 }
 .note-icon-questions{
   background-image: url(../images/PNG/note-question.png);
-  background-size: 13px;
+  background-size: 13px; //border:1.5px solid #e0d4ff;
   background-position: 2px 2px;
 }
 .note-icon-other{
@@ -157,27 +163,23 @@ img{
   background-image: url(../images/PNG/pin.png);
   background-size: 17px;
   background-position: 3px 3px;
-  //border:1.5px solid #e0d4ff;
 }
 
 .icon-corrections{
   background-image: url(../images/SVG/healing.svg);
   background-position: 3px;
-  //border:1.5px solid #ffc497;
 }
 
 .icon-questions{
   background-image: url(../images/PNG/question.png);
   background-size: 14px;
   background-position: 4px 3px;
-  //border:1.5px solid  #fff07d;
 }
 
 .icon-other{
   background-image: url(../images/PNG/other.png);
   background-size: 23px;
   background-position: 0 2px;
-  //border:1.5px solid  #d4ed96;
 }
 
 .selected-details,.menu-details:hover, .filter-icon-details:hover ,.number-details, .icon-details:hover {
